# xapp-corner-bar

./: .gitignore  AUTHORS  README.md  makepot  meson.build  meson_options.txt  xapp-corner-bar.pot
data/: meson.build  org.mate.panel.applet.MateXAppCornerBarAppletFactory.service.in  org.x.MateXAppCornerBarApplet.mate-panel-applet.in.in  org.x.apps.corner-bar.gschema.xml
debian/: changelog  control  mate-xapp-corner-bar.install  rules  xapp-corner-bar-common.install  xfce4-xapp-corner-bar.install
debian/xapp-corner-bar-common/DEBIAN/: control  md5sums
debian/xapp-corner-bar-common/usr/share/dbus-1/services/: org.mate.panel.applet.MateXAppCornerBarAppletFactory.service
debian/xapp-corner-bar-common/usr/share/doc/xapp-corner-bar-common/: copyright
debian/xapp-corner-bar-common/usr/share/mate-panel/applets/: org.x.MateXAppCornerBarApplet.mate-panel-applet
debian/xapp-corner-bar-common/usr/share/xfce4/panel/plugins/: xfce4-xapp-corner-bar-plugin.desktop
debian/xfce4-xapp-corner-bar/DEBIAN/: control  md5sums
po/: meson.build
src/: common.c  common.h  mate-xapp-corner-bar-menu.xml  mate-xapp-corner-bar.c  meson.build  xapp-corner-bar.gresource.xml  xfce4-xapp-corner-bar-plugin.c  xfce4-xapp-corner-bar-plugin.h
theme/: _style.scss  meson.build  xapp-corner-bar.scss
